--- a/src/main/resources/values.properties
+++ b/src/main/resources/values.properties
@@ -1,4 +1,4 @@
 config.code=1302
 config.username=nikkita
-config.message=Hola qué tal! Hoy es el año 2025.
+config.message=Hola quÃ© tal! Hoy es el aÃ±o 2025.
 config.listOfValues=hola,holi,que,tal
