Agregar Map SpEL con Value

--- a/src/main/resources/values.properties
+++ b/src/main/resources/values.properties
@@ -2,3 +2,4 @@ config.code=1302
 config.username=nikkita
 config.message=Hola qué tal! Hoy es el año 2025.
 config.listOfValues=hola,holi,holu,que,tal
+config.valuesMap={product:'CPU Intel Core i7 12th', description: 'Alder Lake, 12 core, a 5 GHz', price: '1000'}
